apps/netboot/netbootxyz/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netbootxyz-pxe
  namespace: netboot
  annotations:
    kube-vip.io/loadbalancerIPs: 10.0.30.103
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: netbootxyz
    app.kubernetes.io/instance: netbootxyz
  ports:
    - name: tftp
      port: 69
      targetPort: 69
      protocol: UDP
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: web
      port: 3000
      targetPort: 3000
      protocol: TCP
