apps/netboot/netbootxyz/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netbootxyz
  namespace: netboot
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`netboot.${DOMAIN}`)"
      priority: 10
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: netbootxyz-pxe
          port: 3000
